--- a/.github/workflows/rubocop-powerhome.yml
+++ b/.github/workflows/rubocop-powerhome.yml
@@ -25,6 +25,7 @@ jobs:
         run: bundle exec rake
 
   release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
