Set working directory for ruby build

--- a/.github/workflows/rubocop-cobra.yml
+++ b/.github/workflows/rubocop-cobra.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+          working-directory: ./rubocop-cobra
       - name: Run the build script
         working-directory: ./rubocop-cobra
         run: bundle exec rake
