--- a/.github/workflows/rubocop-powerhome.yml
+++ b/.github/workflows/rubocop-powerhome.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+          working-directory: ./rubocop-powerhome
       - name: Run the build script
         working-directory: ./rubocop-powerhome
         run: bundle exec rake
