Only release when version file changes

--- a/.github/workflows/rubocop-powerhome.yml
+++ b/.github/workflows/rubocop-powerhome.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 env:
-  WORKDIR: rubocop-powerhome
+  PROJECT_DIR: rubocop-powerhome
 
 jobs:
   build:
@@ -22,19 +22,23 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-          working-directory: ${{ env.WORKDIR }}
+          working-directory: ${{ env.PROJECT_DIR }}
       - name: Run the build script
-        working-directory: ${{ env.WORKDIR }}
+        working-directory: ${{ env.PROJECT_DIR }}
         run: bundle exec rake
 
   release:
     needs: build
     runs-on: ubuntu-latest
-    #if: contains(github.ref, 'refs/tags/v')
+    # if: contains(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
-      - name: Release Gem
-        uses: xjunior/publish-rubygems-action@master
+      - id: version-changed
+        uses: tj-actions/changed-files@v20
+        with:
+          files: ${{ env.PROJECT_DIR }}/**/version.rb
+      - uses: xjunior/publish-rubygems-action@master
+        if: steps.version-changed.outputs.any_changed == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           RUBYGEMS_API_KEY: ${{ secrets.rubygems_api_key }}
