Only release tagged commits

--- a/.github/workflows/rubocop-cobra.yml
+++ b/.github/workflows/rubocop-cobra.yml
@@ -30,7 +30,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    # if: contains(github.ref, 'refs/tags/v')
+    if: contains(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
       - id: version-changed
