--- a/.github/workflows/eslint-config.yml
+++ b/.github/workflows/eslint-config.yml
@@ -5,24 +5,20 @@ on:
 
 env:
   PROJECT_DIR: eslint-config
+  NODE_VERSION: '14.18.1'
+  REGISTRY_URL: 'https://registry.npmjs.org'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Node ${{ matrix.node }}
-    strategy:
-      matrix:
-        node:
-          - '14.18.1'
-
+    name: Node ${{ env.NODE_VERSION }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Node ${{ matrix.node }}
+      - name: Set up Node ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
         with: 
-          node-version: ${{ matrix.node }}
-          bundler-cache: true
-      - run: npm install
+          node-version: ${{ env.NODE_VERSION }}
+      - run: npm ci
         working-directory: ${{ env.PROJECT_DIR }}
       - name: Run the build script
         run: npm run lint
@@ -38,5 +34,16 @@ jobs:
         uses: tj-actions/changed-files@v20
         with:
           files: ${{ env.PROJECT_DIR }}/package.json
-      - run: "echo release"
+      - name: "Release"
         if: steps.version-changed.outputs.any_changed == 'true'
+      - name: Set up Node ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          registry-url: ${{ env.REGISTRY_URL }}
+      - run: npm ci
+        working-directory: ${{ env.PROJECT_DIR }}
+      - run: npm publish
+        working-directory: ${{ env.PROJECT_DIR }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
