--- a/.github/workflows/eslint-config.yml
+++ b/.github/workflows/eslint-config.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: ${{ env.NODE_VERSION }}
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
         working-directory: ${{ env.PROJECT_DIR }}
       - name: Run the build script
-        run: npm run lint
+        run: yarn lint
         working-directory: ${{ env.PROJECT_DIR }}
 
   release:
@@ -34,16 +34,15 @@ jobs:
         uses: tj-actions/changed-files@v20
         with:
           files: ${{ env.PROJECT_DIR }}/package.json
-      - name: "Release"
-        if: steps.version-changed.outputs.any_changed == 'true'
       - name: Set up Node ${{ env.NODE_VERSION }}
+        if: steps.version-changed.outputs.any_changed == 'true'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: ${{ env.REGISTRY_URL }}
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
         working-directory: ${{ env.PROJECT_DIR }}
-      - run: npm publish
+      - run: yarn publish
         working-directory: ${{ env.PROJECT_DIR }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
