--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -2,6 +2,9 @@
   "name": "@powerhome/eslint-config",
   "version": "0.1.0",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     "./base": "./lib/base.js",
     "./flow": "./lib/flow.js",
