Do not enforce BlockLength in spec files

--- a/rubocop-powerhome/.rubocop.yml
+++ b/rubocop-powerhome/.rubocop.yml
@@ -5,5 +5,9 @@ Naming/FileName:
   Exclude:
     - lib/rubocop-powerhome.rb
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
 Rails:
   Enabled: false
