--- a/rubocop-cobra/config/default.yml
+++ b/rubocop-cobra/config/default.yml
@@ -57,6 +57,6 @@ Cobra/PresenterFilePlacement:
   VersionAdded: '0.1.0'
 
 Cobra/ViewComponentFilePlacement:
-  Description: 'This cop disallows adding global view_components to the `app/componentss` directory.'
+  Description: 'This cop disallows adding global view_components to the `app/components` directory.'
   Enabled: true
   VersionAdded: '0.4.0'
