--- a/rubocop-powerhome/config/default.yml
+++ b/rubocop-powerhome/config/default.yml
@@ -65,7 +65,7 @@ Style/Lambda:
   EnforcedStyle: literal
 
 Style/NoHelpers:
-  Description: 'This cop blocks global helper classes from existing in an application.'
+  Description: 'This cop blocks global helper modules from existing in an application.'
   Enabled: true
   VersionAdded: '0.4.0'
 
