Split gems into subcomponents. Render docs for each

--- a/portal.yml
+++ b/portal.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
@@ -10,4 +11,34 @@ spec:
   type: library
   owner: heroes-for-hire
   lifecycle: production
+  system: power-application-framework
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: rubocop-cobra
+  title: Rubocop Cobra
+  description: Gem focused on providing Cops to support a healthy cobra app development
+  annotations:
+    backstage.io/techdocs-ref: dir:rubocop-cobra
+spec:
+  type: library
+  owner: heroes-for-hire
+  lifecycle: production
+  subcomponentOf: power-linting
+  system: power-application-framework
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: rubocop-powerhome
+  title: Rubocop Powerhome
+  description: Gem focused on providing standard Rubocop configuration for Power Home Remodeling ruby apps
+  annotations:
+    backstage.io/techdocs-ref: dir:rubocop-powerhome
+spec:
+  type: library
+  owner: heroes-for-hire
+  lifecycle: production
+  subcomponentOf: power-linting
   system: power-application-framework
