--- a/portal.yml
+++ b/portal.yml
@@ -16,6 +16,21 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
+  name: eslint-config-powerhome
+  title: ESLint Config Powerhome
+  description: Provides eslint-config for Power Home Remodeling apps
+  annotations:
+    backstage.io/techdocs-ref: dir:eslint-config
+spec:
+  type: library
+  owner: heroes-for-hire
+  lifecycle: production
+  subcomponentOf: power-linting
+  system: power-application-framework
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
   name: rubocop-cobra
   title: Rubocop Cobra
   description: Gem focused on providing Cops to support a healthy cobra app development
