Give more useful output on violations
These are the standard options we tend to pass.

--- a/rubocop-powerhome/config/default.yml
+++ b/rubocop-powerhome/config/default.yml
@@ -1,6 +1,8 @@
 AllCops:
   TargetRubyVersion: 2.7
   NewCops: enable
+  DisplayStyleGuide: true
+  ExtraDetails: true
 
 Gemspec/RequiredRubyVersion:
   Enabled: false
