Ignore rspec's describe and context on BlockLength
Ignore rspec's describe and context on BlockLength

--- a/rubocop-powerhome/config/default.yml
+++ b/rubocop-powerhome/config/default.yml
@@ -88,3 +88,8 @@ Style/TrailingCommaInArrayLiteral:
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
+
+Metrics/BlockLength:
+  IgnoredMethods:
+    - describe
+    - context
