--- a/.github/workflows/rubocop-powerhome.yml
+++ b/.github/workflows/rubocop-powerhome.yml
@@ -34,7 +34,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ contains(github.ref, 'refs/tags/v') && contains(github.ref, env.PROJECT_DIR) }}
+    if: ${{ contains(github.ref, 'refs/tags/v') && contains(github.ref, github.workflow) }}
     steps:
       - uses: actions/checkout@v3
       - uses: xjunior/publish-rubygems-action@master
