--- a/.github/workflows/rubocop-powerhome.yml
+++ b/.github/workflows/rubocop-powerhome.yml
@@ -39,6 +39,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xjunior/publish-rubygems-action@master
         env:
+          RELEASE_COMMAND: rake build && gem push pkg/*
           GITHUB_TOKEN: ${{ secrets.github_token }}
           RUBYGEMS_API_KEY: ${{ secrets.rubygems_api_key }}
           WORKDIR: ${{ env.PROJECT_DIR }}
